--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <i class="fa-solid">Welcome to</i>
             </div>
             <div>
-                <i class="fa-solid fa-fire"> Hustler's family</i>
+                <i class="fa-solid fa-fire">Hustler's</i>
+                  <br><br>
+            </div>
+              <div>
+                <i class="fa-solid">family</i>
             </div>
         </h1>
     </div>
