--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <nav data-toggled="false" data-transitionable="false">
         <div id="nav-logo-section" class="nav-section">
-            <a href="#">
+            <a href="https://github.com/piyush-mahajan/MGM-s-Hustlers">
                 <i class="fa-solid fa-fire"> MGM's Hustlers</i>
                 <!-- <i class="fa-solid fa-dumpster-fire"></i> -->
             </a>
