--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
             <div>
                 <i class="fa-solid fa-fire">Hustler's</i>
-                  <br><br>
+                <br><br>
             </div>
-              <div>
+            <div>
                 <i class="fa-solid">family</i>
             </div>
         </h1>
@@ -115,18 +115,40 @@
             </div>
         </article>
         <!-- second person -->
+        <!-- Have a nice day -->
         <article data-index="1" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
-                    distinctio quod ipsam magnam! Reprehenderit quis temporibus repellendus facilis ullam aut magni
-                    inventore perferendis sit, facere neque minus.</p>
+                <br><br>
+                <p> Html | CSS | JavaScript | React.js | Next.js | DSA in Java and C | C++ | Tailwind.CSS | Node.js |
+                    Wordpress website Devloper.
+                    |<br><br></p>
+                <p class="">
+
+                    Hi,
+                    This is Pavan Kamthane,
+                    I am a web-developer and designer.
+                    As a web developer, I have a strong foundation in front-end and littile bit back-end web development
+                    technologies. I am proficient in languages such as HTML, CSS, JavaScript and have experience with
+                    frameworks such as React JS, and Node Js. I have a strong understanding of web design principles and
+                    am able to create visually appealing, user-friendly layouts and interfaces. I am able to build
+                    dynamic, interactive websites and web applications that adhere to web standards and are easily
+                    maintainable. In addition, I am proficient in using version control systems such as Git, and am
+                    comfortable collaborating on projects with a team of developers. Overall, I am a dedicated and
+                    detail-oriented web developer who is passionate about building high-quality, innovative web
+                    solutions.
+                    <br><br>
+                    <a class="" target="_blank"
+                        href="https://drive.google.com/file/d/1dGOIQvy659Mmz8i9uNg1hfpCmB0cbY8R/view?usp=share_link">Click
+                        Here to view my resume </a>
+                </p>
             </div>
             <div class="article-title-section article-section">
-                <h2>Wicked Cool Library Shelves</h2>
-                <a class="a-class fa-brands fa-github" href="/"></a>
-                <a class="a-class fa-brands fa-linkedin" href="/"></a>
-                <a class="a-class fa-solid fa-user" href="/"></a>
+                <h2>Pavan Kamtahne</h2>
+                <!-- <i class="fa-brands fa-instagram"></i> -->
+                <a class="a-class fa-brands fa-github" href="https://pavankamthane1.netlify.app/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="https://www.linkedin.com/in/pavankamthane"></a>
+                <a class="a-class fa-solid fa-user" href="https://pavankamthane1.netlify.app/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
@@ -137,6 +159,7 @@
                 </button>
             </div>
         </article>
+
         <!-- third person -->
         <article data-index="2" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
