--- a/index.html
+++ b/index.html
@@ -122,16 +122,12 @@
                 <br><br>
                 <p> Html | CSS | JavaScript | React.js | Next.js | DSA in Java and C | C++ | Tailwind.CSS | Node.js |
                     Wordpress website Devloper.
-                    |<br><br></p>
+                    |<br></p>
                 <p class="">
-                React.js | Node.js | HTML | CSS | JavaScript
-                
-                    I am able to build
-                    dynamic, interactive websites and web applications that adhere to web standards and are easily
+                    I am able to build dynamic, interactive websites and web applications that adhere to web standards and are easily
                     maintainable. In addition, I am proficient in using version control systems such as Git, and am
                     comfortable collaborating on projects with a team of developers.
-                    <br><br>
-                
+                    <br>
                 </p>
             </div>
             <div class="article-title-section article-section">
