pavan's description changed

--- a/index.html
+++ b/index.html
@@ -120,12 +120,10 @@
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <p> Html | CSS | JavaScript | React.js | Next.js | DSA in Java and C | C++ | Tailwind.CSS | Node.js |
-                    Wordpress website Devloper.
+                    Wordpress website Devloper
                     |<br><br></p>
                 <p class="">
-                    I am able to build dynamic, interactive websites and web applications that adhere to web standards and are easily
-                    maintainable. In addition, I am proficient in using version control systems such as Git, and am
-                    comfortable collaborating on projects with a team of developers.
+                    I am a skilled frontend website developer with experience in HTML, CSS, JavaScript, Java, and C. I have completed a number of successful projects in these areas, and am adept at using my technical expertise to create visually appealing and functional websites. Whether working independently or as part of a team, I am known for my problem-solving abilities and attention to detail
                     <br>
                 </p>
             </div>
