SY(IT)DIPAK JADHAV

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="article-title-section article-section">
                 <h2>Dipak Jadhav</h2>
                 <a class="a-class fa-brands fa-github" href="https://github.com/dipakja"></a>
-                <a class="a-class fa-brands fa-linkedin" href="www.linkedin.com/in/dipakjadhav02"></a>
+                <a class="a-class fa-brands fa-linkedin" href="https://www.linkedin.com/in/dipakjadhav02/"></a>
                 <a class="a-class fa-solid fa-user" href="https://dipakja.github.io/portfolio/"></a>
             </div>
             <div class="article-nav-section article-section">
