--- a/third.html
+++ b/third.html
@@ -99,14 +99,16 @@
         <article data-index="1" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
-                    distinctio quod ipsam magnam! Reprehenderit quis temporibus repellendus facilis ullam aut magni
-                    inventore perferendis sit, facere neque minus.</p>
+                <p>HTML|CSS|JS|Node.js|Express.js|Mongo DB|Python|Java<p>
+                <br><br>
+                <p>
+                    Yo! Amey here..I am a Python developer and I love to create websites and web apps that might serve some purpose to various people.I am also proficient in data structures and algorithms in Python with knowledge of Backend web development.
+             </p>
 
             </div>
             <div class="article-title-section article-section">
-                <h2>Wicked Cool Library Shelves</h2>
-                <a class="a-class fa-brands fa-github" href="/"></a>
+                <h2>Amey Kulkarni</h2>
+                <a class="a-class fa-brands fa-github" href="/">www.github.com/SimonXRiley</a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
                 <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
