--- a/third.html
+++ b/third.html
@@ -99,6 +99,7 @@
         <article data-index="1" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
+                <br><br>
                 <p>HTML|CSS|JS|Node.js|Express.js|Mongo DB|Python|Java<p>
                 <br><br>
                 <p>
@@ -108,7 +109,7 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Amey Kulkarni</h2>
-                <a class="a-class fa-brands fa-github" href="/">www.github.com/SimonXRiley</a>
+                <a class="a-class fa-brands fa-github" href="www.github.com/SimonXRiley<">/a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
                 <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
