--- a/third.html
+++ b/third.html
@@ -109,7 +109,7 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Amey Kulkarni</h2>
-                <a class="a-class fa-brands fa-github" href="https://github.com/SimonXRiley">/a>
+                <a class="a-class fa-brands fa-github" href="https://github.com/SimonXRiley"></a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
                 <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
