--- a/third.html
+++ b/third.html
@@ -100,7 +100,7 @@
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
                 <br><br>
-                <p>HTML|CSS|JS|Node.js|Express.js|Mongo DB|Python|Java<p>
+                <p>HTML | CSS | JS |Node.js | Express.js | Mongo DB | Python | Java<p>
                 <br><br>
                 <p>
                     Yo! Amey here..I am a Python developer and I love to create websites and web apps that might serve some purpose to various people.I am also proficient in data structures and algorithms in Python with knowledge of Backend web development.
@@ -110,7 +110,7 @@
             <div class="article-title-section article-section">
                 <h2>Amey Kulkarni</h2>
                 <a class="a-class fa-brands fa-github" href="https://github.com/SimonXRiley"></a>
-                <a class="a-class fa-brands fa-linkedin" href="/"></a>
+                <a class="a-class fa-brands fa-linkedin" href="https://github.com/SimonXRiley"></a>
                 <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
