--- a/third.html
+++ b/third.html
@@ -74,7 +74,7 @@
                 <p> Python | Java | JavaScript | Tailwind CSS | HTML | Github <br><br></p>
                 <p>
                     Hi, MONSON here.... I am an aspiring web-developer currently studying Computer Science. I believe my
-                    knack for trying new things will help me moving forward.You can connect with me on linkedin and do
+                    knack for trying new things will help me in moving forward.You can connect with me on linkedin and do
                     check out my portfolio.
                 </p>
             </div>
