--- a/third.html
+++ b/third.html
@@ -31,7 +31,7 @@
                         <h5>Mahajan</h5>
                     </strong>
                 </a>
-                <a href="https://monson2002.github.io/Personal-Portfolio/"><strong id="strong-text">
+                <a href="https://monson2002-portfolio-2023.netlify.app/"><strong id="strong-text">
                         <h4>Monson</h4>
                         <h5>Verghese</h5>
                     </strong>
@@ -84,7 +84,7 @@
                 <a class="a-class fa-brands fa-github" href="https://github.com/Monson2002"></a>
                 <a class="a-class fa-brands fa-linkedin"
                     href="https://www.linkedin.com/in/monson-reji-verghese-a26061231/"></a>
-                <a class="a-class fa-solid fa-user" href="https://monson2002.github.io/Personal-Portfolio/"></a>
+                <a class="a-class fa-solid fa-user" href="https://monson2002-portfolio-2023.netlify.app/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
