--- a/third.html
+++ b/third.html
@@ -111,7 +111,7 @@
                 <h2>Amey Kulkarni</h2>
                 <a class="a-class fa-brands fa-github" href="https://github.com/SimonXRiley"></a>
                 <a class="a-class fa-brands fa-linkedin" href="https://www.linkedin.com/in/amey-kulkarni-044a47258"></a>
-                <a class="a-class fa-solid fa-user" href="/"></a>
+<!--                 <a class="a-class fa-solid fa-user" href="/"></a> -->
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
