--- a/index.html
+++ b/index.html
@@ -174,19 +174,23 @@
                 </button>
             </div>
         </article>
-        <!-- third person -->
+        <!-- fourth person -->
         <article data-index="3" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores debitis dolore perspiciatis
-                    distinctio quod ipsam magnam! Reprehenderit quis temporibus repellendus facilis ullam aut magni
-                    inventore perferendis sit, facere neque minus.</p>
+                <br><br>
+                <p>Java | C | Python | HTML | CSS <br><br><br> </p>
+                <br>
+                  <p>Hey there!! I am beginner for programming and starting out with web development. I am always eager to learn new skills <3 
+                    Checkout my linkedin and instagram profile for more update
+                    <br><br>
+                </p>
             </div>
             <div class="article-title-section article-section">
-                <h2>Neato Toledo Lighthouse</h2>
-                <a class="a-class fa-brands fa-github" href="/"></a>
+                <h2>Soham Kotgire</h2>
+                <a class="a-class fa-brands fa-github" href="/https://github.com/Sohamkotgire"></a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
-                <a class="a-class fa-solid fa-user" href="/"></a>
+                <a class="a-class fa-solid fa-instagram" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
