--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
             </div>
             <div class="article-title-section article-section">
                 <h2>Soham Kotgire</h2>
-                <a class="a-class fa-brands fa-github" href="/https://github.com/Sohamkotgire"></a>
+                <a class="a-class fa-brands fa-github" href="https://github.com/Sohamkotgire"></a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
-                <a class="a-class fa-solid fa-instagram" href="/"></a>
+                <a class="a-class fa-solid fa-user" href="/"></a>
             </div>
             <div class="article-nav-section article-section">
                 <button class="article-nav-button" type="button" onclick="handleLeftClick()">
