--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </button>
             </div>
         </article>
-        <!-- four person -->
+        <!-- fifth person -->
         <article data-index="4" data-status="inactive" class="article-section">
             <div class="article-image-section article-section"></div>
             <div class="article-description-section article-section">
@@ -210,7 +210,7 @@
                     inventore perferendis sit, facere neque minus.</p>
             </div>
             <div class="article-title-section article-section">
-                <h2>Neato Toledo Lighthouse</h2>
+                <h2>Ashmitsingh Mala</h2>
                 <a class="a-class fa-brands fa-github" href="/"></a>
                 <a class="a-class fa-brands fa-linkedin" href="/"></a>
                 <a class="a-class fa-solid fa-user" href="/"></a>
